--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Happyplaces"
         tools:targetApi="31">
         <activity
+            android:name=".AddHappyPlace"
+            android:exported="false"
+            android:label="ADD HAPPY PLACE"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomNoActionBarTheme"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
