--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.happyplaces">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,14 +18,21 @@
         android:theme="@style/Theme.Happyplaces"
         tools:targetApi="31">
         <activity
-            android:name=".AddHappyPlace"
+            android:name=".activities.HappyPlaceDetailActivity"
             android:exported="false"
-            android:label="ADD HAPPY PLACE"
+            android:label="HAPPY PLACE DETAILS"
             android:screenOrientation="portrait"
             android:theme="@style/CustomNoActionBarTheme"/>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".activities.AddHappyPlace"
+            android:exported="true"
+            android:label="ADD HAPPY PLACE"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomNoActionBarTheme" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
