--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.libraries.places:places:3.0.0'
+    // TODO Getting The Users Location (Step 1: Add location service dependency for getting a current location.)
+    // START
+    // This is for getting the location
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    // END
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
